@@ -12,6 +12,7 @@ Version 0.x - Date TBD
     * Higher compression rate. [OFB]
     * Compressed version of ie.css. [OFB]
     * Alternating table row colors. [OFB]
+    * Added classes .raise-x to raise an element above its parent element. [OFB]
     * 
   
   Bug fixes:
